--- a/src/ui-style/syntax-highlight.css
+++ b/src/ui-style/syntax-highlight.css
@@ -218,7 +218,7 @@ rule:not(.non-editable) property:hover {
 
 .tree-style > div
 {
-  background-color: #fafafa;
+  background-color: #fefefe;
 }
 
 .tree-style > div > node:first-child:before
